--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
 secreteJwtString=food123456789app123456789ood123456789app123456789
 
-## Mail configuration
+# Mail configuration
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=harleen7814@gmail.com
@@ -19,3 +19,9 @@ spring.mail.password=baep qpvv sqhj bnjr
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
+
+# AWS S3 configuration
+aws.s3.region=
+aws.s3.bucket=
+aws.accessKeyId    
+aws.secretKey=
