Setting Cloudinary - Image Upload

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,8 +20,7 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
 
-# AWS S3 configuration
-aws.s3.region=
-aws.s3.bucket=
-aws.accessKeyId    
-aws.secretKey=
+# Cloudinary configuration
+cloudinary.cloud_name=dsfsiamms
+cloudinary.api_key=968588389869669
+cloudinary.api_secret=uRwR8JZhtdoZ9b2MIahAFmGIdII
