--- a/pom.xml
+++ b/pom.xml
@@ -141,6 +141,11 @@
 			<version>0.13.0</version>
 			<scope>compile</scope>
 		</dependency>
+		<dependency>
+			<groupId>com.cloudinary</groupId>
+			<artifactId>cloudinary-http44</artifactId>
+			<version>1.39.0</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
