--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
-secreteJwtString=food123456789app123456789ood123456789app123456789
+jwt.secret=food123456789app123456789ood123456789app123456789
 
 # Mail configuration
 spring.mail.host=smtp.gmail.com
